valid_tests/statements/test4.go
func main() {
    var sum int
    sum = 0
    
    // For clássico completo: init; condition; post
    for i := 0; i < 10; i++ {
        sum = sum + i
    }
}
