invalid_tests/statements/test9.go
// Test 2: For loop with invalid syntax
func main() {
    for i := 0; i < 10; j++ {
        x := i
    }
}
